--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
-trunk/globalmentor-text-elff/.classpath
-trunk/globalmentor-text-elff/.project
-trunk/globalmentor-text-elff/.settings
-trunk/globalmentor-text-elff/target
+#Eclipse
+*.launch
+.buildpath
+.classpath
+.cproject
+.factorypath
+.project
+/.settings/
+/bin/
+
+#JetBrains
+*.iml
+*.iws
+/.idea/
+/out/
+
+#Mac
+.DS_Store
+
+#Maven
+/log/
+/target/
+
+#NetBeans
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+.nb-gradle/
+nb-configuration.xml
+nbactions.xml
