--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
 	<parent>
 		<groupId>com.globalmentor</groupId>
 		<artifactId>globalmentor-parent</artifactId>
-		<version>8.1.0</version>
+		<version>8.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>globalmentor-text-elff</artifactId>
 	<version>0.5.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
 	<name>GlobalMentor ELFF</name>
 	<description>GlobalMentor Java Extended Log File Format (ELFF) library.</description>
