--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.globalmentor</groupId>
 		<artifactId>globalmentor-parent</artifactId>
-		<version>8.2.0</version>
+		<version>8.5.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>globalmentor-text-elff</artifactId>
-	<version>0.5.1-SNAPSHOT</version>
+	<version>0.6.0-SNAPSHOT</version>
 
 	<name>GlobalMentor ELFF</name>
 	<description>GlobalMentor Java Extended Log File Format (ELFF) library.</description>
@@ -25,8 +25,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.globalmentor</groupId>
-			<artifactId>globalmentor-core</artifactId>
-			<version>0.5.3</version>
+			<artifactId>globalmentor-base</artifactId>
 		</dependency>
 	</dependencies>
 </project>
