--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<artifactId>globalmentor-text-elff</artifactId>
-	<version>0.6.1-SNAPSHOT</version>
+	<version>0.6.1</version>
 
 	<name>GlobalMentor ELFF</name>
 	<description>GlobalMentor Java Extended Log File Format (ELFF) library.</description>
